WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
44015
[Qt] Border should not cast shadows
https://bugs.webkit.org/show_bug.cgi?id=44015
Summary
[Qt] Border should not cast shadows
Ariya Hidayat
Reported
2010-08-14 13:54:09 PDT
Border does not need to cast shadows by itself, it's already handled as part of the box. For example, a div with a dotted border casts a rectangular shadow, without extra dots surrounding the rectangle. This behavior was first introduced in
http://trac.webkit.org/changeset/34763
.
Attachments
Patch
(48.49 KB, patch)
2010-08-14 15:21 PDT
,
Ariya Hidayat
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ariya Hidayat
Comment 1
2010-08-14 15:06:21 PDT
And due to
http://trac.webkit.org/changeset/47103
, too.
Ariya Hidayat
Comment 2
2010-08-14 15:21:50 PDT
Created
attachment 64430
[details]
Patch
Antonio Gomes
Comment 3
2010-08-15 21:20:40 PDT
Comment on
attachment 64430
[details]
Patch Nice step forward to
bug 44025
!
Ariya Hidayat
Comment 4
2010-08-15 22:27:50 PDT
Comment on
attachment 64430
[details]
Patch Clearing flags on attachment: 64430 Committed
r65392
: <
http://trac.webkit.org/changeset/65392
>
Ariya Hidayat
Comment 5
2010-08-15 22:27:56 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug