2010-08-15  Ariya Hidayat  <ariya@sencha.com>

Reviewed by Antonio Gomes.

        [Qt] Border should not cast shadows
        https://bugs.webkit.org/show_bug.cgi?id=44015

        Update pixel test reference.

        * platform/qt/fast/box-shadow/basic-shadows-expected.checksum:
        * platform/qt/fast/box-shadow/basic-shadows-expected.png:
2010-08-15  Ariya Hidayat  <ariya@sencha.com>

        Reviewed by Antonio Gomes.

        [Qt] Border should not cast shadows
        https://bugs.webkit.org/show_bug.cgi?id=44015

        Shadows should be not casted except for brush fill (which is not what
        drawLine and drawRect are supposed to do).

        * platform/graphics/qt/GraphicsContextQt.cpp:
        (WebCore::GraphicsContext::drawRect): Remove shadow painting,
        (WebCore::GraphicsContext::drawLine): ditto.

Canonical link: https://commits.webkit.org/56192@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@65392 268f45cc-cd09-0410-ab3c-d52691b4dbfc